# vibe-narrator

./: .env.example  .gitattributes  .gitignore  AUDIO_FIX.md  AUDIO_FIX_VERIFICATION.md  AUDIO_POPPING_FIX.md  AUDIO_SETUP.md  CHAT_USAGE.md  CHUNKING_EXPLAINED.md  CONFIGURATION_SIMPLIFIED.md  CURSOR_MCP_SETUP.md  DEPLOYMENT.md  MODE_GUIDE.md  MODE_IMPLEMENTATION.md  QUICK_MODE_REFERENCE.md  README.md  SETUP.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_SUMMARY.md  app.py  audio_player.py  bridge-bak.py  bridge.py  chat.py  claude_bridge.py  diagnose.sh  kill-mcp-server.sh  logo_data.py  narrator-bridge  narrator.py  pyproject.toml  quick_test.sh  requirements.txt  test_chat.sh  test_config.sh  test_echo.sh  test_mcp_only.sh  test_narrate.py  test_simple.sh
narrator-client/: .env.example  audio_player.py  bridge.py  narrator-bridge
narrator-client/explore_cursor_integration/: narrate_and_play.py  realtime_narrate.py  test_audio_playback.py
narrator-mcp/: characters.py  chunker.py  events.py  llm.py  pyproject.toml  requirements.txt  server.py  session.py  tts.py
narrator-mcp/tests/: conftest.py  test_chunker.py
narrator_mcp/: __init__.py  characters.py  chunker.py  llm.py  server.py  session.py  tts.py
narrator_mcp_fastmcp/: llm.py  server.py
terminal-client/: pyproject.toml
terminal-client/explore_cursor_integration/: cursor_ws_probe.py  play_narrate_result.py
terminal-client/tests/: test_narrate.py
terminal_client/: .env.example  .gitignore  README.md  SETUP.md  audio_player.py  bridge.py  chat.py  narrate  narrator-bridge
tests/: conftest.py  test_events.py
(+12 files in other folders)
