[project]
name = "narrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.21.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "fastmcp>=0.1.0",
    "httpx>=0.28.0",
]
