[project]
name = "narrator-mcp"
version = "0.1.0"
description = "Narrator MCP Server - Text to speech narration using LLM and TTS"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

